<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="263dp"
            android:layout_height="56dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="71dp"
            android:gravity="center"
            android:text="@string/search_movies_by_title"

            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/search_movie_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695" />

        <EditText
            android:id="@+id/search_movie_input"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:autofillHints="@string/movie_title"
            android:ems="10"
            android:hint="@string/enter_movie_title"
            android:inputType=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_movie_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <Button
            android:id="@+id/search_movie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/search_movie_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.178" />

        <!--        <androidx.fragment.app.FragmentContainerView-->
        <!--            android:id="@+id/api_search_results"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_margin="20dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/search_movie_input" />-->

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/api_search_results"
            android:layout_width="345dp"
            android:layout_height="513dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_movie_button"
            app:layout_constraintVertical_bias="0.437"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>